spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: spring
  name: spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spring
    spec:
      containers:
      - image: spring
        name: spring
        resources: {}
status: {}
